styles/Home.module.scss
@import '../utils/_variables.scss';

.banner {
    color: var(--color-2);
    grid-column: span 5;
    margin: 0 auto;
    text-align: center;
    display: block;
    letter-spacing: 0.2rem;
    font-family: inherit;
    opacity: 100%;
    h1,
    label {
        font-family: inherit;
    }
    span {
        color: var(--color-2);
        margin-right: 0.2rem;
        font-family: inherit;
    }
    @media screen and (max-width: $sm-max) {
        font-size: 1.2rem;
    }

    @media (prefers-color-scheme: dark) {
        color: var(--color-2);

        span {
            color: var(--color-2);
        }
    }
}

.titleWrapper {
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;

    flex-wrap: wrap;
    height: 55vh;
    grid-template-columns: repeat(5, 1fr);
    position: absolute;
    z-index: 10;
    font-family: var(--style-font-1);
    font-weight: 1000;
    opacity: 100%;
    top: 25vh;
    left: 1rem;
    padding: 1rem;

    min-height: 390px;
    cursor: default;

    @media screen and (max-width: $sm-max) {
        grid-template-columns: repeat(2, 1fr);
    }

    div {
        font-family: inherit;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-end;
        &:nth-child(1) {
            align-items: center;
        }
        &:nth-child(n + 2) {
            min-height: 44vh;
            width: 7.7rem;

            @media screen and (max-height: 750px) and (min-height: 675px) {
                min-height: 38vh;
            }
            @media screen and (max-height: 600px) {
                min-height: 50vh;
            }
            @media screen and (max-width: 375px), (max-height: 600px) {
                width: 6.7rem;
            }
            @media screen and (max-width: 350px) {
                width: 5rem;
            }
        }

        @media screen and (max-width: 700px) {
            &:nth-child(n + 4) {
                display: none;
            }
        }
        @media screen and (max-width: $md-max) {
            &:nth-child(n + 6) {
                display: none;
            }
        }
        @media screen and (max-width: 1050px) {
            &:nth-child(n + 8) {
                display: none;
            }
        }

        p {
            padding: 0 0.5rem;
            font-family: inherit;
            font-size: 1.75rem;
            letter-spacing: 0;
            font-weight: 100;
            color: inherit;
            margin: 0;
            line-height: 1.75rem;
            height: 1.9rem;
            cursor: pointer;
            @media screen and (max-width: 350px) {
                font-size: 1rem;
                line-height: 1.3rem;
                height: 1.5rem;
            }
            @media screen and (max-height: 600px) {
                font-size: 1.4rem;
                line-height: 1.5rem;
                height: 1.9rem;
            }
            span {
                opacity: 0;
                font-family: inherit;
                color: inherit;
                transition: 0.7s;

                @media screen and (max-width: $md-max), (max-height: 600px) {
                    opacity: 0.4;
                }
            }

            &:hover {
                span {
                    opacity: 0.4;
                }
            }
        }
    }
    .flexTitle {
        width: 100%;
        display: flex;
        flex-direction: column;
        grid-column: span 5;
        h1 {
            line-height: 2.5rem;
        }
        p {
            font-family: sans-serif;
            font-size: 0.8rem;
            text-align: center;
            cursor: default;
            height: 1rem;
        }
        @media screen and (max-width: $sm-max), (max-height: 600px) {
            h1 {
                line-height: 0.9rem;
            }
            p {
                font-size: 0.7rem;
                text-align: center;
                cursor: default;
                height: 1rem;
            }
        }
    }
}

.lander {
    font-size: 3rem;
    letter-spacing: 0.1rem;
    font-weight: 100;
    height: var(--main-height);
    width: 100vw;
    display: flex;
    align-items: center;

    .landerOverlay {
        text-align: center;
        margin: 0 auto;
        width: 100vw;
        height: var(--main-height);
        background-image: var(--primary-gradient);

        opacity: var(--semi-transparent);
        font-family: var(--style-font-1);

        h1 {
            padding: 0 1rem;
        }
    }

    @media only screen and (max-width: $sm-max), (max-height: 600px) {
        font-size: 2rem;
    }
}
.about,
.contact {
    height: var(--main-height);
    overflow: hidden;
    position: relative;

    p {
        margin: 1rem auto;
    }

    @media screen and (max-width: $md-max), (max-height: 600px) {
        height: var(--main-height);
        font-size: 0.8rem;
    }
    @media screen and (max-width: $sm-max), (max-height: 600px) {
        h2 {
            font-size: 0.9rem;
        }

        p {
            margin: 0.2rem auto;
            font-size: 0.8rem;
            line-height: 1rem;
        }
    }
}
.about {
    color: var(--color-2);
    background-color: var(--color-6);
}
.contact {
    color: var(--color-2);
    background-color: var(--color-1);
    ul {
        position: relative;
    }
    .icon,
    .iconTitle {
        position: absolute;
    }
    .iconTitle {
        top: 13rem;
        right: -9rem;
        transform: rotate(30deg);
    }
    @media screen and (max-width: $sm-max) {
        .iconTitle {
            right: -4rem;
        }
    }
    p {
        width: 90%;
    }

    .icon {
        text-align: center;

        color: var(--color-1);
        margin: 0.2rem;
        &:nth-child(1) {
            top: 14rem;
            right: -4rem;
            transform: rotate(-30deg);
            @media screen and (max-width: $sm-max) {
                top: 9rem;
            }
        }
        &:nth-child(2) {
            top: 20rem;
            right: 0rem;
            @media screen and (max-width: $sm-max) {
                top: 14rem;
            }
        }
        &:nth-child(3) {
            top: 8rem;
            right: 0rem;
        }
        a {
            border-radius: 0.3rem;

            background-color: var(--color-3);
            padding: 1.3rem 1.3rem;
        }
    }
}

